versions/v4.0.0/connectivity/usb/device_next/api/usbd.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/connectivity/usb/device_next/api/usbd.html
original_path: connectivity/usb/device_next/api/usbd.html
---

# USB device stack (next) API

New USB device stack API is experimental and is subject to change without notice.

## API reference

[USB device core API](../../../../doxygen/html/group__usbd__api.md)

Related code samples

- [Console over USB CDC ACM](../../../../samples/subsys/usb/console/README.md#usb-cdc-acm-console "Output "Hello World!" to the console over USB CDC ACM.")Output "Hello World!" to the console over USB CDC ACM.
- [HCI H4 over USB](../../../../samples/bluetooth/hci_usb_h4/README.md#bluetooth_hci_usb_h4 "Turn a Zephyr board into a USB H4 Bluetooth dongle (Linux/BlueZ only).")Turn a Zephyr board into a USB H4 Bluetooth dongle (Linux/BlueZ only).
- [HCI USB](../../../../samples/bluetooth/hci_usb/README.md#bluetooth_hci_usb "Turn a Zephyr board into a USB Bluetooth dongle (compatible with all operating systems).")Turn a Zephyr board into a USB Bluetooth dongle (compatible with all operating systems).
- [USB Audio asynchronous explicit feedback sample](../../../../samples/subsys/usb/uac2_explicit_feedback/README.md#uac2-explicit-feedback "USB Audio 2 explicit feedback sample playing audio on I2S.")USB Audio 2 explicit feedback sample playing audio on I2S.
- [USB Audio asynchronous implicit feedback sample](../../../../samples/subsys/usb/uac2_implicit_feedback/README.md#uac2-implicit-feedback "USB Audio 2 implicit feedback sample playing stereo and recording mono audio on I2S interface.")USB Audio 2 implicit feedback sample playing stereo and recording mono audio
  on I2S interface.
- [USB CDC-ACM](../../../../samples/subsys/usb/cdc_acm/README.md#usb-cdc-acm "Use USB CDC-ACM driver to implement a serial port echo.")Use USB CDC-ACM driver to implement a serial port echo.
- [USB HID keyboard](../../../../samples/subsys/usb/hid-keyboard/README.md#usb-hid-keyboard "Implement a basic HID keyboard device.")Implement a basic HID keyboard device.
- [USB Mass Storage](../../../../samples/subsys/usb/mass/README.md#usb-mass "Expose board's RAM or FLASH as a USB disk using USB Mass Storage driver.")Expose board's RAM or FLASH as a USB disk using USB Mass Storage driver.
- [USB shell](../../../../samples/subsys/usb/shell/README.md#usb-shell "Use shell commands to interact with USB device stack.")Use shell commands to interact with USB device stack.

[USB device core API](../../../../doxygen/html/group__usbd__msg__api.md)
